<resources>
    <string name="app_name">Sandesh</string>
    <string name="welcome_back">welcome back</string>
    <string name="login_to_continue">login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">SignIn</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_img">Add Img</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign out</string>
</resources>